Made the blocked times and blocked days visible on the event manager and fixed the calendar days to overflow scroll when there are too many events to display at a time.

--- a/public/index.css
+++ b/public/index.css
@@ -176,6 +176,7 @@ html {
   flex: 1;
   border: 1px solid black;
   text-align: center;
+  overflow-y: overlay;
 }
 
 @media(max-width: 950px) {
